archived-docs/versions/v2.8/modules/en/pages/cluster-admin/kubernetes-resources/configmaps.adoc
= ConfigMaps
:page-languages: [en, zh]
:revdate: 2024-09-26
:page-revdate: {revdate}
:experimental:

While most types of Kubernetes secrets store sensitive information, https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/[ConfigMaps] store general configuration information, such as a group of config files. Because ConfigMaps don't store sensitive information, they can be updated automatically, and therefore don't require their containers to be restarted following update (unlike most secret types, which require manual updates and a container restart to take effect).

ConfigMaps accept key value pairs in common string formats, like config files or JSON blobs. After you upload a config map, any workload can reference it as either an environment variable or a volume mount.

. In the upper left corner, click *☰ > Cluster Management*.
. Go to the cluster that has the workload that should reference a ConfigMap and click *Explore*.
. In the left navigation bar, click menu:More Resources[Core > ConfigMaps].
. Click *Create*.
. Enter a *Name* for the Config Map.
+

[NOTE]
====
Kubernetes classifies ConfigMaps as https://kubernetes.io/docs/concepts/configuration/secret/[secrets], and no two secrets in a project or namespace can have duplicate names. Therefore, to prevent conflicts, your ConfigMaps must have a unique name among the other certificates, registries, and secrets within your workspace.
====


. Select the *Namespace* you want to add Config Map to.
. On the *Data* tab, add a key-value pair to your ConfigMap. Add as many values as you need.  You can add multiple key value pairs to the ConfigMap by copying and pasting. Alternatively, use *Read from File* to add the data. Note: If you need to store sensitive data, xref:security/secrets-hub.adoc[use a secret], not a ConfigMap.
. Click *Create*.

*Result:* Your ConfigMap is added to the namespace. You can view it in the Rancher UI from the menu:Resources[Config Maps] view.

== What's Next?

Now that you have a ConfigMap added to a namespace, you can add it to a workload that you deploy from the namespace of origin. You can use the ConfigMap to specify information for you application to consume, such as:

* Application environment variables.
* Specifying parameters for a Volume mounted to the workload.

For more information on adding ConfigMaps to a workload, see xref:cluster-admin/kubernetes-resources/workloads-and-pods/deploy-workloads.adoc[Deploying Workloads].
